fix z-index in contact component and dropDown link not closing sidebar onClick

--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -48,7 +48,7 @@ $inputWidth: 250px;
       font-size: 5em;
     }
     letter-spacing: 0.1em;
-    z-index: 5;
+    z-index: 2;
   }
 }
 
